fix: disable auto zoom on ios safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,3 +39,11 @@ select:focus,
 textarea {
 	font-size: 16px;
 }
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+	select,
+	textarea,
+	input {
+		font-size: 16px;
+	}
+}
